# RTSP

./: .gitignore  CMakeLists.txt  H264.cc  H264.h  README.md  main.cc  rtp.cc  rtspServer
include/: H264.h  rtp.h  rtsp.h
lib/: libH264.dylib  librtp.dylib
src/: H264.cc  main.cc  rtp.cc  rtsp.cc
